temp/api_components_analysis_final.log
  File "<string>", line 1
    import sqlite3; conn = sqlite3.connect('projects/sampleSrc/metadata.db'); cursor = conn.cursor(); cursor.execute('SELECT COUNT(*) FROM api_components'); api_components = cursor.fetchone()[0]; print(f'API 컴포넌트 수: {api_components}'); cursor.execute('SELECT component_id, api_type, tech_stack, interface_type FROM api_components ORDER BY component_id'); apis = cursor.fetchall(); print('\\nAPI 컴포넌트 목록:'); for comp_id, api_type, tech_stack, interface_type in apis: print(f'  Component ID {comp_id}: {api_type} ({tech_stack}, {interface_type})'); conn.close()
                                                                                                                                                                                                                                                                                                                                                                                                                       ^^^
SyntaxError: invalid syntax
